--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -2,21 +2,14 @@ html,
 body {
 	height: 100%;
 	font-family: 'Open Sans', sans-serif;
-	background: rgb(97, 95, 95);
+	background: linear-gradient(90deg, #8159C6 0%, #6C7CFF 100%);
 }
 
 .wrapper {
 	display: flex;
 	flex-direction: column;
-	min-height: 100%;
 }
 
-.main {
-	flex: 1 0 auto;
-}
-.footer {
-	flex: 0 0 auto;
-}
 
 .container{
   max-width: 1255px;
