--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,8 +4,23 @@
 @import 'libs';
 @import 'global';
 
+
+
 .header {
     margin-bottom: 81px;
+    position: relative;
+    z-index: 10;
+    &::before {
+        content: '';
+        position: absolute;
+        left: -4%;
+        bottom: -120%;
+        background: url('../images/graph.png') no-repeat;
+        // background-size: cover;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
     &__content {
         padding: 19px 0;
         display: flex;
@@ -24,7 +39,7 @@
     }
     &__text {
         font-size: 14px;
-        line-height: 16.8px;
+        line-height: 120%;
         font-weight: normal;
     }
     &__text--white {
@@ -36,7 +51,7 @@
     }
     &__span {
         font-size: 16px;
-        line-height: 19.2px;
+        line-height: 120%;
         color: #FFDE00;
         font-weight: 700;
     }
@@ -44,9 +59,191 @@
         color: #000000;
         padding: 19px 25px 17px;
         font-size: 14px;
-        line-height: 17.22px;
+        line-height: 120%;
         font-weight: 600;
         border: 1px solid #FFDE00;
         border-radius: 4px;
+        transition: 0.5s all;
     }
+    &__btn:hover {
+        background: #FFDE00;
+        cursor: pointer;
+    }
+}
+
+.wrapper {
+    overflow-y: hidden;
+    position: relative; 
+    z-index: 10;
+    &::after {
+        position: absolute;
+        content: '';
+        bottom: -77%;
+        width: 100%;
+        height: 100%;
+        right: 0;
+        background: url('../images/bg.png') no-repeat;
+        z-index: 10;
+    }
+}
+
+.main {
+    padding-bottom: 73px;
+    &__content {
+        display: flex;
+        justify-content: space-between;
+       
+    }
+
+    &__box {
+        display: flex;
+        justify-content: space-between;
+        // align-items: center;
+        // max-width: 614px;
+    }
+    &__title {
+        font-size: 48px;
+        line-height: 120%;
+        font-weight: 700;
+        max-width: 532px;
+        color: #ffffff;
+        margin-bottom: 60px;
+    }
+    &__span {
+        color: #FFDE00;
+    }
+    &__left-part, &__right-part {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+
+    &__left-part {
+        margin-right: 67px;
+    }
+
+    &__box-title {
+        font-size: 24px;
+        line-height: 120%;
+        color: #ffffff;
+        font-weight: 700;
+        margin-bottom: 28px;
+        text-align: left;
+    }
+    &__round {
+        width: 62px;
+        height: 62px;
+        border-radius: 50%;
+        background: #FF885E;
+        margin-bottom: 50px;
+        position: relative;
+        margin-left: 13px;
+    }
+
+    .round-span {
+        position: absolute;
+        display: block;
+    }
+
+    .round-text {
+        font-size: 36px;
+        color: #ffffff;
+        line-height: 120%;
+        width: 71px;
+        font-weight: 700;
+        z-index: 10;
+        top: 7px;
+        left: 7px;
+        letter-spacing: -0.7px;
+    }
+
+    .middle-round {
+        width: 72px;
+        height: 72px;
+        border-radius: 50%;
+        border: 1px solid #FF885E;
+        top: -5px;
+        left: -5px;
+    }
+
+    .big-round {
+        width: 88px;
+        height: 88px;
+        border-radius: 50%;
+        border: 1px solid #FF885E;
+        opacity: 0.3;
+        top: -13px;
+        left: -13px;
+    }
+
+    &__btn {
+        color: #000000;
+        font-size: 16px;
+        line-height: 130%;
+        font-weight: 600;
+        padding: 23px 25px 21px;
+        background: #FFDE00;
+        box-shadow: 0px 0px 30px rgba(255, 222, 0, 0.35), inset 0px -2px 2px rgba(0, 0, 0, 0.25);
+        border-radius: 4px;
+        border: none;
+        outline: none;
+        display: block;
+        transition: 0.5s all;
+        cursor: pointer;
+    }
+
+    &__btn:hover {
+        box-shadow: none;
+    }
+    &__list:first-of-type {
+        margin-bottom: 32px;
+    }
+
+    &__list {
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            height: 100%;
+            width: 3px;
+            background: #FF885E;
+            top: 0;
+            left: -16px;
+        }
+    }
+
+    &__list-item {
+        color: #ffffff;
+        font-size: 14px;
+        line-height: 120%;
+        font-weight: 600;
+    }
+
+    &__list-item:not(:last-of-type) {
+        margin-bottom: 16px;
+    }
+
+    &__list-item--title {
+        color: #C9C3F3;
+        font-size: 24px;
+        line-height: 120%;
+        font-weight: 700;
+    }
+
+    .img {
+        position: relative;
+        z-index: 10;
+        &::after {
+            content: '';
+            position: absolute;
+            right: -20%;
+            top: 0;
+            background: url('../images/students-bg.png') no-repeat;
+            background-size: contain;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+    }
+
 }
