--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -24,7 +24,7 @@
     &__content {
         padding: 19px 0;
         display: flex;
-        gap: 8%;
+        gap: 1%;
         justify-content: space-between;
         align-items: center;
     }
@@ -63,11 +63,11 @@
         font-weight: 600;
         border: 1px solid #FFDE00;
         border-radius: 4px;
-        transition: 0.5s all;
+        transition: 0.7s all;
     }
     &__btn:hover {
         background: #FFDE00;
-        cursor: pointer;
+        cursor: url('../images/cursor.cur'), pointer;
     }
 }
 
@@ -83,12 +83,13 @@
         height: 100%;
         right: 0;
         background: url('../images/bg.png') no-repeat;
-        z-index: 10;
+        z-index: 5;
     }
 }
 
 .main {
     padding-bottom: 73px;
+
     &__content {
         display: flex;
         justify-content: space-between;
@@ -164,6 +165,7 @@
         border: 1px solid #FF885E;
         top: -5px;
         left: -5px;
+        animation: pulse infinite 2s;
     }
 
     .big-round {
@@ -174,9 +176,11 @@
         opacity: 0.3;
         top: -13px;
         left: -13px;
+        animation: pulse infinite 2s;
     }
 
     &__btn {
+        z-index: 10;
         color: #000000;
         font-size: 16px;
         line-height: 130%;
@@ -190,16 +194,19 @@
         display: block;
         transition: 0.5s all;
         cursor: pointer;
+        min-width: 266px;
     }
 
     &__btn:hover {
         box-shadow: none;
+        cursor: url('../images/cursor.cur'), pointer;
     }
     &__list:first-of-type {
         margin-bottom: 32px;
     }
 
     &__list {
+        z-index: 10;
         position: relative;
         &::before {
             content: '';
@@ -232,7 +239,7 @@
 
     .img {
         position: relative;
-        z-index: 10;
+        z-index: 1;
         &::after {
             content: '';
             position: absolute;
@@ -246,4 +253,167 @@
         }
     }
 
+}
+
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+
+
+@media (max-width: 1100px) {
+    .header {
+        &__btn {
+            padding: 14px 20px 12px;
+            min-width: 151px;
+        }
+        &__item:not(:nth-of-type(4)) {
+            margin-right: 24px;
+        }
+    }
+
+    .main {
+    .img {
+        position: absolute;
+        right: -10%;
+    }
+}
+
+}
+
+
+@media (max-width: 960px) {
+    .header {
+        margin-bottom: 40px;
+        &__content {
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: space-evenly;
+        }
+
+        &__list {
+            order: 3;
+        }
+    }
+
+    .main {
+        .img {
+            right: -20%;
+            opacity: 0.3;
+        }
+    }
+}
+
+@media (max-width: 660px) {
+
+
+    .header {
+        margin-bottom: 0;
+        &::before {
+            content: none;
+        }
+        &__content {
+            justify-content: space-between;
+        }
+        &__logo {
+            max-width: 131px;
+            margin-bottom: 25px;
+        }
+        &__btn {
+            margin-bottom: 25px;
+        }
+        &__list {
+            flex-wrap: wrap;
+        }
+        &__item {
+            margin-bottom: 40px;
+            margin-right: 40px;
+        }
+    }
+
+
+    .main {
+        padding-bottom: 43px;
+        .text {
+            margin: 0 auto;
+        }
+        &__title {
+            font-size: 24px;
+            line-height: 120%;
+            text-align: center;
+            max-width: 260px;
+            margin: 0 auto 29px;
+        }
+        &__box {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        &__left-part {
+            margin-right: 0;
+        }
+
+        &__box-item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            min-width: 310px;
+        }
+
+        &__round {
+            margin-bottom: 37px;
+            margin-left: 29px
+        }
+
+        .middle-round {
+            width: 78px;
+            height: 78px;
+            left: -8px;
+            top: -8px;
+        }
+
+        .big-round {
+            width: 96px;
+            height: 96px;
+            left: -17px;
+            top: -17px;
+        }
+
+        &__list {
+            &::before {
+                left: -8px;
+            }
+        }
+
+        &__btn {
+            margin: 0 auto;
+            margin-bottom: 48px;
+        }
+
+
+        .img {
+            right: 0;
+            bottom: 0;
+            opacity: 1;
+            overflow: hidden;
+            width: fit-content;
+            height: fit-content;
+        }
+    }
+
+    .wrapper {
+        &::after {
+            bottom: -77%;
+        }
+    }
 }
