--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -150,7 +150,7 @@
         font-size: 36px;
         color: #ffffff;
         line-height: 120%;
-        width: 71px;
+        width: 75px;
         font-weight: 700;
         z-index: 10;
         top: 7px;
@@ -338,6 +338,7 @@
         }
         &__btn {
             margin-bottom: 25px;
+            margin-right: 20px;
         }
         &__list {
             flex-wrap: wrap;
@@ -374,7 +375,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            min-width: 310px;
+            min-width: 320px;
         }
 
         &__round {
